syntax = "proto3";
package client;

message PBClientHello {
}